--- a/index.html
+++ b/index.html
@@ -7,26 +7,28 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>La Mer bleue</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="monstyle.css">
     </head>
     <body>
-        <h1>mon premier site</h1>
-        <h2> mon intertitre</h2>
-        <img src="mer-bleue.png" alt="L'étang de la mer-bleue." width="560">
+        <h1>La Mer bleue</h1>
+        <h2> Une balade dans les sentiers</h2>
+        <img src="mer-bleue.png" alt="L'étang de la mer-bleue." width="560"> <figcaption class=légende1> Lors de votre balade, vous pourrez voir de magnifiques paysages comme celui-ci.</figcaption>
+
+    
 <a href="http://uottawa.ca">Université d'Ottawa</a>
     <p>
         La Mer bleue se retrouve dans le secteur sud-est de la capitale d'Ottawa. Cet endroit existe depuis 7700 ans et de nombreux oiseaux, animaux sauvages et plantes peuvent être repérés.
     </p>
     <p>La Mer bleue est un des endroits de la Ceinture de verdure le plus visité. Les touristes peuvent aller dans les sentiers de randonnée en pleine nature et des promenades guidées de panneaux.</p>
     
-        <img src="boardwalk.jpg" alt="Passerelle de bois dans un marais." width="560">
+        <img src="boardwalk.jpg" alt="Passerelle de bois dans un marais." width="560"> <figcaption class=légende2>Un beau sentier que vous pouvez enprunter sur le site.</figcaption>
         <p>
             La Mer bleu comporte un sentier de 20 km qui peut se faire à pied en été, mais également en ski de fond ou raquette pendant l'hivers. Cependant, il a certains aspects à respecter lors de la visite.
         </p>
-        <ul>
+        <ul class="liste1">
             <li>Rester sur les sentiers officiels</li>
             <li>Interdiction de nourrire les animaux</li>
             <li>Respecter la faune et la flore en étant éloigné des animaux</li>
